...
                            unfocusedBorderColor = Color(0xFFE0E0E0),
                            unfocusedContainerColor = Color.White,
                            focusedContainerColor = Color.White,
                            errorBorderColor = Color(0xFFE57373),
                            errorLabelColor = Color(0xFFE57373)
                        ),
                        modifier = Modifier.fillMaxWidth().testTag("schoolId"),
                    )

                    // Animated error message for User ID
                    AnimatedVisibility(
                        visible = userIdError.isNotEmpty(),
                        enter = fadeIn() + expandVertically(),
...
                    Spacer(modifier = Modifier.height(18.dp))

                    // Password Field
                    OutlinedTextField(
                        value = password,
                        onValueChange = { newValue ->
                            password = newValue

                            if (newValue.length > 0 && newValue.length < 8) {
                                passwordError = "Password length should be minimum 8 characters."
                            } else if (newValue.isNotBlank() && newValue.length >= 8) {
                                passwordError = "" // Clear error if criteria is met
                            } else if (newValue.isBlank()) {
...
                            disabledContainerColor = Color(0xFFBDBDBD),
                            disabledContentColor = Color.White,
                            contentColor = Color.White
                        ),
                        modifier = Modifier
                            .fillMaxWidth()
                            .height(58.dp).testTag("loginButton"),
                        shape = RoundedCornerShape(14.dp),
                        elevation = ButtonDefaults.buttonElevation(
                            defaultElevation = 4.dp,
                            pressedElevation = 8.dp
                        ),
                        enabled = isButtonEnabled
...
