...
                containerColor = Color(0xFF2854D8),
                contentColor = Color.White
            ),
            modifier = Modifier
                .fillMaxWidth(0.6f)
                .height(40.dp)
                .testTag("editProfileButton"),
        ) {
            Text("Edit Profile", fontSize = 14.sp,fontWeight = FontWeight.SemiBold)
        }
    }
}
//testing the profile screen
...
